// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagSelector renders and matches the snapshot when closed 1`] = `
<div
  className="tag-selector"
>
  <Field
    label={
      <Label
        onClick={[Function]}
      >
        Tags
      </Label>
    }
  >
    <Input
      className="tag-selector__input"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      placeholder="Select or create tags"
      type="text"
      value=""
    />
  </Field>
</div>
`;

exports[`TagSelector renders and matches the snapshot when opened 1`] = `
<TagSelector
  label="Tags"
  onTagsUpdate={[MockFunction]}
  placeholder="Select or create tags"
  tags={
    Array [
      Object {
        "displayName": "tag one",
        "name": "tag1",
      },
      Object {
        "displayName": "tag two",
        "name": "tag2",
      },
    ]
  }
>
  <div
    className="tag-selector"
  >
    <Field
      label={
        <Label
          onClick={[Function]}
        >
          Tags
        </Label>
      }
    >
      <div
        className="p-form__group p-form-validation"
      >
        <Label>
          <label
            className="p-form__label"
          >
            <Label
              onClick={[Function]}
            >
              <label
                className="p-form__label"
                onClick={[Function]}
              >
                Tags
              </label>
            </Label>
          </label>
        </Label>
        <div
          className="p-form__control u-clearfix"
        >
          <Input
            className="tag-selector__input"
            onChange={[Function]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            placeholder="Select or create tags"
            type="text"
            value=""
          >
            <Field
              labelFirst={true}
            >
              <div
                className="p-form__group p-form-validation"
              >
                <div
                  className="p-form__control u-clearfix"
                >
                  <input
                    className="p-form-validation__input tag-selector__input"
                    onChange={[Function]}
                    onFocus={[Function]}
                    onKeyPress={[Function]}
                    placeholder="Select or create tags"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </Field>
          </Input>
        </div>
      </div>
    </Field>
  </div>
</TagSelector>
`;

exports[`TagSelector renders and matches the snapshot with tag descriptions 1`] = `
<TagSelector
  label="Tags"
  onTagsUpdate={[MockFunction]}
  placeholder="Select or create tags"
  tags={
    Array [
      Object {
        "description": "description one",
        "displayName": "tag one",
        "name": "tag1",
      },
      Object {
        "description": "description two",
        "displayName": "tag two",
        "name": "tag2",
      },
    ]
  }
>
  <div
    className="tag-selector"
  >
    <Field
      label={
        <Label
          onClick={[Function]}
        >
          Tags
        </Label>
      }
    >
      <div
        className="p-form__group p-form-validation"
      >
        <Label>
          <label
            className="p-form__label"
          >
            <Label
              onClick={[Function]}
            >
              <label
                className="p-form__label"
                onClick={[Function]}
              >
                Tags
              </label>
            </Label>
          </label>
        </Label>
        <div
          className="p-form__control u-clearfix"
        >
          <Input
            className="tag-selector__input"
            onChange={[Function]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            placeholder="Select or create tags"
            type="text"
            value=""
          >
            <Field
              labelFirst={true}
            >
              <div
                className="p-form__group p-form-validation"
              >
                <div
                  className="p-form__control u-clearfix"
                >
                  <input
                    className="p-form-validation__input tag-selector__input"
                    onChange={[Function]}
                    onFocus={[Function]}
                    onKeyPress={[Function]}
                    placeholder="Select or create tags"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </Field>
          </Input>
        </div>
      </div>
    </Field>
  </div>
</TagSelector>
`;
